# WORKSTATION_LOCAL

./: .gitignore  .~lock.workstation_concept.md.odt#  AGENTS.md  excalidraw_integration_plan.md  index.html  package.json  setup.sh  vite.config.ts  workstation_concept.md.odt
.claude/: settings.local.json
docs/: GLM_4.7_QUICKSTART.md  GLM_MIGRATION_SUMMARY.md  OPERATOR_GUIDE.md
projects/20260201-AI-WORKSTATION-9c73/: 1-20260201-AI-WORKSTATION-9c73-01-PAYLOAD.json  1-20260201-AI-WORKSTATION-9c73-01-PRD.md  1-20260201-AI-WORKSTATION-9c73-01-SYSTEM_STATE.md  2-20260201-AI-WORKSTATION-9c73-02-DESIGN_SPEC.md  2-20260201-AI-WORKSTATION-9c73-02-PAYLOAD.json  3-20260201-AI-WORKSTATION-9c73-03-AUDIT_REPORT.md  3-20260201-AI-WORKSTATION-9c73-03-GATING_PAYLOAD.json  4-20260201-AI-WORKSTATION-9c73-04-PAYLOAD.json  4-20260201-AI-WORKSTATION-9c73-04-PROJECT_PLAN.md  4-20260201-AI-WORKSTATION-9c73-04-REFERENCE_SAMPLES.md  5-20260201-AI-WORKSTATION-9c73-05-PAYLOAD.json  5-20260201-AI-WORKSTATION-9c73-05-PROD_READY_SPEC.md  5-20260201-AI-WORKSTATION-9c73-05-SYSTEM_STATE.md  ANALYSIS-BLOCKERS-INCONSISTENCIES.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/ai/: AiPanel.tsx  commands.ts  ollama.ts  operator.ts  schema.ts
src/doc/: DocPanel.tsx
src/filesystem/: FileTreePanel.tsx
src/layout/: GoldenLayoutSurface.tsx
src/platform/: index.ts  tauri.ts  types.ts  web.ts
src/state/: windowRegistry.ts
src/terminal/: TerminalPanel.tsx  YaziPanel.tsx
src/vault/: VaultPanel.tsx  (+1 more)
(+12 files in other folders)
