[package]
name = "ai-workstation"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = { version = "2" }
tauri-plugin-pty = { version = "0.2" }

[features]
custom-protocol = ["tauri/custom-protocol"]
